Fix footer text elements case & alignment

--- a/output.css
+++ b/output.css
@@ -643,18 +643,12 @@ html {
   margin-bottom: 4rem;
 }
 
-.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
-.my-3 {
-  margin-top: 0.75rem;
-  margin-bottom: 0.75rem;
-}
-
 .-mt-14 {
   margin-top: -3.5rem;
+}
+
+.mb-1 {
+  margin-bottom: 0.25rem;
 }
 
 .mb-8 {
@@ -679,10 +673,6 @@ html {
 
 .mt-8 {
   margin-top: 2rem;
-}
-
-.mb-1 {
-  margin-bottom: 0.25rem;
 }
 
 .mt-\[auto\] {
@@ -923,11 +913,6 @@ html {
   padding-bottom: auto;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
 .pb-0 {
   padding-bottom: 0px;
 }
@@ -962,10 +947,6 @@ html {
 
 .pt-8 {
   padding-top: 2rem;
-}
-
-.pt-3 {
-  padding-top: 0.75rem;
 }
 
 .text-left {
@@ -1348,9 +1329,8 @@ a {
     margin-right: 25%;
   }
 
-  .sm\:my-3 {
-    margin-top: 0.75rem;
-    margin-bottom: 0.75rem;
+  .sm\:mb-1 {
+    margin-bottom: 0.25rem;
   }
 
   .sm\:mt-16 {
@@ -1363,10 +1343,6 @@ a {
 
   .sm\:mt-24 {
     margin-top: 6rem;
-  }
-
-  .sm\:mb-1 {
-    margin-bottom: 0.25rem;
   }
 
   .sm\:w-\[384px\] {
@@ -1410,10 +1386,6 @@ a {
     padding-left: 1rem;
   }
 
-  .sm\:pt-3 {
-    padding-top: 0.75rem;
-  }
-
   .sm\:text-left {
     text-align: left;
   }
@@ -1432,15 +1404,76 @@ a {
   }
 }
 
+@media (min-width: 768px) {
+  .md\:w-2\/3 {
+    width: 66.666667%;
+  }
+
+  .md\:w-\[70\%\] {
+    width: 70%;
+  }
+
+  .md\:w-\[75\%\] {
+    width: 75%;
+  }
+
+  .md\:w-\[80\%\] {
+    width: 80%;
+  }
+
+  .md\:w-\[90\%\] {
+    width: 90%;
+  }
+
+  .md\:w-\[68\%\] {
+    width: 68%;
+  }
+
+  .md\:w-\[60\%\] {
+    width: 60%;
+  }
+
+  .md\:w-\[62\%\] {
+    width: 62%;
+  }
+
+  .md\:w-\[62\.5\%\] {
+    width: 62.5%;
+  }
+
+  .md\:w-\[62\.2\%\] {
+    width: 62.2%;
+  }
+
+  .md\:w-\[62\.1\%\] {
+    width: 62.1%;
+  }
+
+  .md\:w-\[61\%\] {
+    width: 61%;
+  }
+
+  .md\:w-\[61\.5\%\] {
+    width: 61.5%;
+  }
+
+  .md\:w-\[61\.7\%\] {
+    width: 61.7%;
+  }
+
+  .md\:text-center {
+    text-align: center;
+  }
+}
+
 @media (min-width: 1024px) {
   .lg\:mx-auto {
     margin-left: auto;
     margin-right: auto;
   }
 
-  .lg\:my-4 {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+  .lg\:mb-2 {
+    margin-bottom: 0.5rem;
   }
 
   .lg\:mt-0 {
@@ -1455,10 +1488,6 @@ a {
     margin-top: auto;
   }
 
-  .lg\:mb-2 {
-    margin-bottom: 0.5rem;
-  }
-
   .lg\:w-2\/4 {
     width: 50%;
   }
@@ -1469,6 +1498,15 @@ a {
 
   .lg\:w-\[63\.45\%\] {
     width: 63.45%;
+  }
+
+  .lg\:w-full {
+    width: 100%;
+  }
+
+  .lg\:w-fit {
+    width: -moz-fit-content;
+    width: fit-content;
   }
 
   .lg\:flex-row {
@@ -1498,10 +1536,6 @@ a {
 
   .lg\:pl-8 {
     padding-left: 2rem;
-  }
-
-  .lg\:pt-4 {
-    padding-top: 1rem;
   }
 
   .lg\:text-center {
